fix: grid-gap

--- a/assets/style/Objects/_post-list.scss
+++ b/assets/style/Objects/_post-list.scss
@@ -1,6 +1,6 @@
 .o-post-list {
   display: grid;
-  grid-gap: 1.5rem;
+  grid-gap: 2rem;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: auto auto;
 
